--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -17,7 +17,7 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
-    server-->>browser: SPA JS file
+    server-->>browser: JavaScript file
     deactivate server
 
     Note right of browser: Browser executes spa.js
