--- a/part0/0.6.md
+++ b/part0/0.6.md
@@ -7,7 +7,7 @@ sequenceDiagram
 
     Note right of browser: User writes note and clicks Save. JS handles the form submit
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
     server-->>browser: Status code: 201 Created
     deactivate server
